# Machine_learning_UAS

./: detecting-fake-news.ipynb
Project_deteksi_berita_hoax_menggunakan_NLP/: detecting-fake-news.ipynb
project_pm_prediksi_banjir/: project.ipynb  pyproject.toml
project_prediksi_banjir/project_pm_prediksi_banjir/: README.md
